# foundation

./: .gitignore  CMakeLists.txt  LICENSE  Package.swift  README.md
.github/workflows/: cmake-single-platform.yml
include/: FoundationCxx.hpp
memory/: object.hpp  weak.hpp
src/: foundation.hpp
src/exceptions/: exception.cpp  exception.hpp  exceptions.hpp
src/io/: io.hpp
src/io/fs/: file.cpp  file.hpp  fs.hpp
src/memory/: allocator.cpp  allocator.hpp  memory.hpp  object.cpp  object.hpp  strong.hpp  weak.hpp
src/parallelism/: mutex.cpp  mutex.hpp  parallelism.hpp  run-loop.cpp  run-loop.hpp  thread.cpp  thread.hpp
src/serialization/: json.cpp  json.hpp  serialization.hpp
src/system/: endian.cpp  endian.hpp  environment.cpp  environment.hpp  system.hpp
src/tools/: math.hpp  queue.hpp  regular-expression.cpp  regular-expression.hpp  tools.hpp
src/types/: array.hpp  cloneable.hpp  comparable.hpp  comparison.hpp  data.hpp  date.cpp  date.hpp  dictionary.hpp  duration.cpp  duration.hpp  hashable.cpp  hashable.hpp  null.cpp  null.hpp  number.hpp  pair.hpp  string.cpp  string.hpp  type.cpp  type.hpp  types.hpp  unicode.cpp  unicode.hpp  url.cpp  url.hpp  uuid.cpp  uuid.hpp
